# lvillazon-tfe-unir

./: README.md  pyproject.toml
api/: Dockerfile  Dockerfile.mlflow  docker-compose.yml  main.py  pyproject.toml
ml/: Dockerfile  entrypoint.sh
ml/db/: bird_dataset.py
ml/models/: __init__.py  bird_base_model.py  efficient_net_b0_model.py  mobilev2_model.py  resnet50_model.py
ml/training/: execution.py  safe_mlflow.py
web/: README.md  package-lock.json  package.json
web/src/: App.vue  App_old.vue  main.js
