[tool.poetry]
name = "lvillazon-tfe-unir"
version = "0.1.0"
description = ""
authors = ["Luis Villazón <luisvillazon@buendia.travel>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

matplotlib = "^3.10.7"
tensorflow = "2.18.0"
pandas = "^2.3.3"
loguru = "^0.7.3"
keras = "3.8.0"
scikit-learn = "^1.7.2"
mlflow = "^3.6.0"
click = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
